added multiwarriors army support and defender class